[gd_scene load_steps=8 format=3 uid="uid://xgr6imtskgmc"]

[ext_resource type="PackedScene" uid="uid://boiuirawcqx84" path="res://ui/tabs/tab_properties/field/property_field.tscn" id="1_5606e"]
[ext_resource type="Script" path="res://ui/tabs/tab_properties/field/texture_field/texture_field.gd" id="2_cohox"]
[ext_resource type="Texture2D" uid="uid://clpptfcqgf1ox" path="res://resources/icons/empty_texture_icon.png" id="3_4mw8o"]
[ext_resource type="PackedScene" uid="uid://cqy80g0rwe4vj" path="res://ui/tabs/tab_properties/field/texture_field/droppable_texture_button/droppable_texture_button.tscn" id="3_bm7do"]
[ext_resource type="PackedScene" uid="uid://bdnh40tn0t5yx" path="res://ui/fried_convex_panel/fried_convex_panel.tscn" id="3_umdt8"]
[ext_resource type="Texture2D" uid="uid://noi6i8fmrepx" path="res://resources/icons/open_folder_icon.png" id="3_y7udq"]
[ext_resource type="Texture2D" uid="uid://ph36o52jrb1h" path="res://resources/icons/cross_icon.png" id="4_kfe3x"]

[node name="TextureField" instance=ExtResource("1_5606e")]
size_flags_vertical = 4
script = ExtResource("2_cohox")

[node name="FriedConvexPanel" parent="H" index="1" instance=ExtResource("3_umdt8")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="H/FriedConvexPanel" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="EmptyTextureButton" parent="H/FriedConvexPanel/HBoxContainer" index="0" instance=ExtResource("3_bm7do")]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Drop a Texture here"
icon = ExtResource("3_4mw8o")

[node name="TextureButton" parent="H/FriedConvexPanel/HBoxContainer" index="1" instance=ExtResource("3_bm7do")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Edit Texture resource"
toggle_mode = true

[node name="ImportButton" type="Button" parent="H/FriedConvexPanel/HBoxContainer" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Import selected Texture"
focus_mode = 0
icon = ExtResource("3_y7udq")
icon_alignment = 1

[node name="ClearButton" type="Button" parent="H/FriedConvexPanel/HBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Clear Texture"
focus_mode = 0
icon = ExtResource("4_kfe3x")
icon_alignment = 1
